crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@456.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into ma_test select x,x from generate_series(0,29) t(x);"
---
InsertStmt@0..63
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "ma_test"
  Whitespace@19..20 " "
  SelectStmt@20..61
    Select@20..26 "select"
    Whitespace@26..27 " "
    ResTarget@27..28
      ColumnRef@27..28
        Ident@27..28 "x"
    Ascii44@28..29 ","
    ResTarget@29..30
      ColumnRef@29..30
        Ident@29..30 "x"
    Whitespace@30..31 " "
    From@31..35 "from"
    Whitespace@35..36 " "
    RangeFunction@36..61
      List@36..56
        FuncCall@36..56
          Ident@36..51 "generate_series"
          Ascii40@51..52 "("
          AConst@52..53
            Iconst@52..53 "0"
          Ascii44@53..54 ","
          AConst@54..56
            Iconst@54..56 "29"
      Ascii41@56..57 ")"
      Whitespace@57..58 " "
      Alias@58..61
        Ident@58..59 "t"
        Ascii40@59..60 "("
        Ident@60..61 "x"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

