crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@457.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index on ma_test (b);
---
IndexStmt@0..28
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  On@13..15 "on"
  Whitespace@15..16 " "
  RangeVar@16..23
    Ident@16..23 "ma_test"
  Whitespace@23..24 " "
  Ascii40@24..25 "("
  IndexElem@25..26
    Ident@25..26 "b"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

