crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@494.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table pp_enumpart (a pp_colors) partition by list (a);
---
CreateStmt@0..61
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "pp_enumpart"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  ColumnDef@26..37
    Ident@26..27 "a"
    Whitespace@27..28 " "
    TypeName@28..37
      Ident@28..37 "pp_colors"
  Ascii41@37..38 ")"
  Whitespace@38..39 " "
  PartitionSpec@39..59
    Partition@39..48 "partition"
    Whitespace@48..49 " "
    By@49..51 "by"
    Whitespace@51..52 " "
    Ident@52..56 "list"
    Whitespace@56..57 " "
    Ascii40@57..58 "("
    PartitionElem@58..59
      Ident@58..59 "a"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

