crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@495.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table pp_enumpart_green partition of pp_enumpart for values in ('green');"
---
CreateStmt@0..80
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "pp_enumpart_green"
  Whitespace@30..31 " "
  Partition@31..40 "partition"
  Whitespace@40..41 " "
  Of@41..43 "of"
  Whitespace@43..44 " "
  RangeVar@44..55
    Ident@44..55 "pp_enumpart"
  Whitespace@55..56 " "
  For@56..59 "for"
  Whitespace@59..60 " "
  Values@60..66 "values"
  Whitespace@66..67 " "
  PartitionBoundSpec@67..78
    InP@67..69 "in"
    Whitespace@69..70 " "
    Ascii40@70..71 "("
    AConst@71..78
      Sconst@71..78 "'green'"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

